--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -99,6 +99,9 @@ input {
   font-weight: 800;
   src: url("../fonts/Roboto-Roboto.ttf"); }
 
+html {
+  overflow-x: hidden; }
+
 .btn {
   position: relative;
   display: inline-block;
@@ -153,14 +156,14 @@ input {
       left: 0; }
 
 .wrap-image-animation {
-  margin: auto auto auto 20px;
+  margin: auto auto auto 13px;
   bottom: 0;
   left: 0;
   position: relative;
   right: 0;
   top: 5px;
-  width: 100%;
-  z-index: 1; }
+  z-index: 1;
+  width: calc(100% - 10px); }
   .wrap-image-animation .wrap-img {
     position: relative;
     transform: translate(-15px, -15px);
@@ -261,6 +264,259 @@ input {
 ::-webkit-scrollbar-thumb:hover {
   background: #555; }
 
+@keyframes modal-video {
+  0% {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+@keyframes modal-video-inner {
+  0% {
+    transform: translateY(100px); }
+  to {
+    transform: translate(0); } }
+
+.modal-video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000000;
+  cursor: pointer;
+  opacity: 1;
+  animation-timing-function: ease-out;
+  animation-duration: .3s;
+  animation-name: modal-video;
+  transition: opacity .3s ease-out; }
+
+.modal-video-close {
+  opacity: 0; }
+
+.modal-video-close .modal-video-movie-wrap {
+  transform: translateY(100px); }
+
+.modal-video-body {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 0 10px;
+  box-sizing: border-box; }
+
+.modal-video-body,
+.modal-video-inner {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center; }
+
+.modal-video-inner {
+  align-items: center; }
+
+@media (orientation: landscape) {
+  .modal-video-inner {
+    padding: 10px 60px;
+    box-sizing: border-box; } }
+
+.modal-video-movie-wrap {
+  width: 100%;
+  height: 0;
+  position: relative;
+  padding-bottom: 56.25%;
+  background-color: #333;
+  animation-timing-function: ease-out;
+  animation-duration: .3s;
+  animation-name: modal-video-inner;
+  transform: translate(0);
+  transition: transform .3s ease-out; }
+
+.modal-video-movie-wrap iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; }
+
+.modal-video-close-btn {
+  position: absolute;
+  z-index: 2;
+  top: -45px;
+  right: 0;
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  overflow: hidden;
+  border: none;
+  background: transparent; }
+
+@media (orientation: landscape) {
+  .modal-video-close-btn {
+    top: 0;
+    right: -45px; } }
+
+.modal-video-close-btn:before {
+  transform: rotate(45deg); }
+
+.modal-video-close-btn:after {
+  transform: rotate(-45deg); }
+
+.modal-video-close-btn:after,
+.modal-video-close-btn:before {
+  content: "";
+  position: absolute;
+  height: 2px;
+  width: 100%;
+  top: 50%;
+  left: 0;
+  background: #fff;
+  border-radius: 5px;
+  margin-top: -6px; }
+
+.js-video-button {
+  position: relative; }
+
+.js-video-button svg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
+
+.js-video-button svg path {
+  fill: #0a53be; }
+
+.img_video_js {
+  width: 200px;
+  height: 100px;
+  object-fit: cover;
+  object-position: center; }
+
+.item_stunning {
+  padding: 15px;
+  overflow: hidden;
+  border: 1px solid #dddddd;
+  height: 100%;
+  position: relative; }
+  .item_stunning .icon {
+    font-size: 50px;
+    margin-bottom: 20px;
+    transition: all .3s linear; }
+  .item_stunning .title {
+    margin-bottom: 30px;
+    position: relative;
+    letter-spacing: 0.5px;
+    font-size: 18px;
+    font-weight: 600;
+    text-transform: capitalize;
+    line-height: 1.3;
+    transition: all .3s linear; }
+  .item_stunning .desc {
+    font-size: 15px;
+    line-height: 1.4;
+    letter-spacing: 0.5px; }
+  .item_stunning:before, .item_stunning:after {
+    border-width: 1px;
+    border-style: solid;
+    content: "";
+    position: absolute;
+    height: 50px;
+    width: 50px;
+    transition: all .3s linear; }
+  .item_stunning:before {
+    top: -1px;
+    left: -1px;
+    border-bottom-color: transparent;
+    border-right-color: transparent;
+    border-top-color: #c59d5f;
+    border-left-color: #c59d5f; }
+  .item_stunning:after {
+    right: -1px;
+    bottom: -1px;
+    border-top-color: transparent;
+    border-left-color: transparent;
+    border-right-color: #c59d5f;
+    border-bottom-color: #c59d5f; }
+  .item_stunning:hover .title, .item_stunning:hover .icon {
+    color: #c59d5f; }
+  .item_stunning:hover:before {
+    border-width: 5px;
+    border-style: solid;
+    border-bottom-color: transparent;
+    border-right-color: transparent; }
+  .item_stunning:hover:after {
+    border-width: 5px;
+    border-style: solid;
+    border-top-color: transparent;
+    border-left-color: transparent; }
+  @media screen and (min-width: 992px) {
+    .item_stunning {
+      padding: 30px; } }
+
+.item-partner a img {
+  height: 50px;
+  width: auto;
+  margin: 0 20px 20px; }
+
+.item-testimonial {
+  padding: 10px; }
+  .item-testimonial .content {
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.15);
+    padding: 25px;
+    background-color: #fff; }
+    .item-testimonial .content .stars {
+      margin-bottom: 15px; }
+      .item-testimonial .content .stars i {
+        font-size: 20px;
+        color: #c59d5f;
+        margin: 0 3px; }
+    .item-testimonial .content .title {
+      margin-bottom: 20px;
+      position: relative;
+      letter-spacing: 0.5px;
+      font-size: 18px;
+      text-transform: capitalize;
+      line-height: 1.3;
+      transition: all .3s linear; }
+    .item-testimonial .content .avatar {
+      text-align: center;
+      margin-bottom: 15px; }
+      .item-testimonial .content .avatar img {
+        width: 80px;
+        height: 80px;
+        object-fit: cover;
+        object-position: center;
+        border-radius: 50%; }
+    .item-testimonial .content .name {
+      margin-bottom: 10px;
+      letter-spacing: 0.5px;
+      font-size: 18px;
+      font-weight: 600;
+      text-transform: capitalize;
+      line-height: 1.3;
+      transition: all .3s linear;
+      text-align: center; }
+    .item-testimonial .content .company {
+      margin-bottom: 16px;
+      letter-spacing: 0.5px;
+      font-style: italic;
+      font-size: 18px;
+      text-transform: capitalize;
+      line-height: 1.3;
+      transition: all .3s linear;
+      text-align: center;
+      color: #c59d5f; }
+
+.swiper-container {
+  padding: 15px; }
+
+.swiper-button-prev, .swiper-button-next {
+  width: 30px;
+  height: 30px;
+  background-color: #000; }
+
+.swiper-button-next:after, .swiper-button-prev:after {
+  font-size: 14px;
+  color: #fff; }
+
 .bl_frontend {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
@@ -335,6 +591,8 @@ input {
             .bl_frontend .header .wrapper .menu .nav .nav-item .dropdown-menu li a:hover::after {
               left: 0;
               background-color: #c59d5f; }
+          .bl_frontend .header .wrapper .menu .nav .nav-item .dropdown-menu li a:focus {
+            background-color: unset; }
       .bl_frontend .header .wrapper .action a {
         text-transform: capitalize;
         color: #ffffff;
@@ -352,11 +610,16 @@ input {
       right: 0;
       top: 78px;
       background-color: #fff;
-      padding: 20px 15px; }
+      padding: 20px 15px;
+      transform: translateX(100%); }
       .bl_frontend .header .wrap_menu_mb .nav {
         flex-direction: column; }
   .bl_frontend .main .section-padding {
     padding: 70px 0; }
+  .bl_frontend .main .section-background {
+    background-color: #f4f1ea; }
+    .bl_frontend .main .section-background .section-title p img {
+      background-color: #f4f1ea; }
   .bl_frontend .main .section-title {
     text-align: center; }
     .bl_frontend .main .section-title .sub-title > * {
@@ -377,7 +640,9 @@ input {
         width: 65px;
         height: 65px;
         background-color: #fff;
-        padding: 15px; }
+        padding: 15px;
+        position: relative;
+        z-index: 2; }
       .bl_frontend .main .section-title p:after {
         content: "";
         position: absolute;
@@ -387,7 +652,7 @@ input {
         bottom: 40px;
         width: 180px;
         background-color: #bfbfbf;
-        z-index: -1;
+        z-index: 1;
         height: 1px;
         margin: 0 auto;
         border-radius: 50%;
@@ -437,3 +702,179 @@ input {
     .bl_frontend .main .section-about .section-content p {
       margin-bottom: 0;
       line-height: 1.6; }
+  .bl_frontend .main .section_banner_link {
+    background-size: cover;
+    background-position: center center;
+    min-height: 300px; }
+  .bl_frontend .main .section-services {
+    background-color: #f4f1ea; }
+    .bl_frontend .main .section-services .section-title p img {
+      background-color: #f4f1ea; }
+    @media screen and (min-width: 992px) {
+      .bl_frontend .main .section-services .w_left {
+        width: 30%; } }
+    .bl_frontend .main .section-services .w_left .section-content {
+      margin-bottom: 35px;
+      line-height: 1.6; }
+    @media screen and (min-width: 992px) {
+      .bl_frontend .main .section-services .w_right {
+        width: 70%; } }
+    .bl_frontend .main .section-services .w_right .item {
+      overflow: hidden;
+      position: relative; }
+      .bl_frontend .main .section-services .w_right .item img {
+        position: relative;
+        display: block;
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+        object-position: center;
+        transition: all 0.3s linear; }
+        @media screen and (min-width: 992px) {
+          .bl_frontend .main .section-services .w_right .item img {
+            height: 350px; } }
+      .bl_frontend .main .section-services .w_right .item a {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        opacity: 0;
+        background: rgba(0, 0, 0, 0.5);
+        visibility: hidden;
+        transition: all 0.3s linear;
+        padding: 0 15px; }
+        .bl_frontend .main .section-services .w_right .item a span {
+          text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+          font-size: 20px;
+          letter-spacing: 10px;
+          text-transform: uppercase;
+          margin: 0;
+          font-weight: 700;
+          width: 100%;
+          color: #c59d5f;
+          transition: all 0.3s linear; }
+      .bl_frontend .main .section-services .w_right .item:hover img {
+        transform: scale(1.2); }
+      .bl_frontend .main .section-services .w_right .item:hover a {
+        opacity: 1;
+        visibility: visible; }
+        .bl_frontend .main .section-services .w_right .item:hover a span {
+          letter-spacing: 0; }
+  .bl_frontend .main .section-blogs .wrapper {
+    box-shadow: 0 0 30px 1px rgba(0, 0, 0, 0.15); }
+    @media screen and (min-width: 992px) {
+      .bl_frontend .main .section-blogs .wrapper > * {
+        width: 50%; } }
+  .bl_frontend .main .section-blogs .item-main {
+    position: relative; }
+    .bl_frontend .main .section-blogs .item-main img {
+      height: 400px;
+      width: 100%;
+      object-fit: cover;
+      object-position: center;
+      transition: all .3s linear;
+      display: block; }
+    .bl_frontend .main .section-blogs .item-main .content {
+      padding: 25px;
+      height: 167px; }
+      .bl_frontend .main .section-blogs .item-main .content .tags {
+        display: flex;
+        flex-wrap: wrap;
+        margin-bottom: 10px; }
+        .bl_frontend .main .section-blogs .item-main .content .tags .tag {
+          display: inline-block;
+          padding: 5px 10px;
+          background-color: #041527;
+          color: #fff;
+          font-size: 12px;
+          text-transform: uppercase;
+          line-height: normal;
+          margin: 0 6px 6px 0; }
+      .bl_frontend .main .section-blogs .item-main .content .title {
+        color: #041527;
+        margin-bottom: 15px;
+        text-transform: capitalize;
+        font-size: 22px;
+        letter-spacing: 0;
+        line-height: 30px;
+        font-weight: bold;
+        word-break: break-word;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis; }
+      .bl_frontend .main .section-blogs .item-main .content .desc {
+        line-height: 1.3;
+        word-break: break-word;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis; }
+  .bl_frontend .main .section-blogs .wrap-item-short {
+    background-color: #f4f1ea;
+    padding: 20px; }
+    @media screen and (min-width: 992px) {
+      .bl_frontend .main .section-blogs .wrap-item-short {
+        max-height: 567px;
+        overflow: auto; } }
+    .bl_frontend .main .section-blogs .wrap-item-short .item {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      padding-bottom: 20px;
+      border-bottom: 1px solid #e3e0db;
+      margin-bottom: 20px; }
+      .bl_frontend .main .section-blogs .wrap-item-short .item:last-child {
+        border-bottom: unset;
+        margin-bottom: 0; }
+      .bl_frontend .main .section-blogs .wrap-item-short .item img {
+        width: 100px;
+        height: 80px;
+        object-fit: cover;
+        object-position: center;
+        margin-right: 15px; }
+      .bl_frontend .main .section-blogs .wrap-item-short .item .content {
+        width: calc(100% - 115px); }
+        .bl_frontend .main .section-blogs .wrap-item-short .item .content .tags {
+          display: flex;
+          flex-wrap: wrap;
+          margin-bottom: 10px; }
+          .bl_frontend .main .section-blogs .wrap-item-short .item .content .tags .tag {
+            display: inline-block;
+            padding: 5px 10px;
+            background-color: #041527;
+            color: #fff;
+            font-size: 12px;
+            text-transform: uppercase;
+            line-height: normal;
+            margin: 0 6px 6px 0; }
+        .bl_frontend .main .section-blogs .wrap-item-short .item .content .title {
+          color: #041527;
+          margin-bottom: 10px;
+          text-transform: capitalize;
+          font-size: 16px;
+          letter-spacing: 0;
+          line-height: 30px;
+          font-weight: bold;
+          word-break: break-word;
+          display: -webkit-box;
+          -webkit-line-clamp: 1;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          text-overflow: ellipsis; }
+        .bl_frontend .main .section-blogs .wrap-item-short .item .content .desc {
+          line-height: 1.3;
+          word-break: break-word;
+          display: -webkit-box;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          text-overflow: ellipsis; }
