--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -100,6 +100,9 @@
                       background-color: #c59d5f;
                     }
                   }
+                  &:focus{
+                    background-color: unset;
+                  }
                 }
               }
             }
@@ -130,6 +133,7 @@
       top: 78px;
       background-color: #fff;
       padding: 20px 15px;
+      transform: translateX(100%);
       .nav{
         flex-direction: column;
 
@@ -139,6 +143,16 @@
   .main{
     .section-padding{
       padding: 70px 0;
+    }
+    .section-background{
+      background-color: #f4f1ea;
+      .section-title{
+        p{
+          img{
+            background-color: #f4f1ea;
+          }
+        }
+      }
     }
     .section-title{
       text-align: center;
@@ -167,6 +181,8 @@
           height: 65px;
           background-color: #fff;
           padding: 15px;
+          position: relative;
+          z-index: 2;
         }
         &:after{
           content: "";
@@ -177,7 +193,7 @@
           bottom: 40px;
           width: 180px;
           background-color: #bfbfbf;
-          z-index: -1;
+          z-index: 1;
           height: 1px;
           margin: 0 auto;
           border-radius: 50%;
@@ -229,6 +245,216 @@
         p{
           margin-bottom: 0;
           line-height: 1.6;
+        }
+      }
+    }
+    .section_banner_link{
+      background-size: cover;
+      background-position: center center;
+      min-height: 300px;
+      .wrapper{
+
+      }
+    }
+    .section-services{
+      background-color: #f4f1ea;
+      .section-title{
+        p{
+          img{
+            background-color: #f4f1ea;
+          }
+        }
+      }
+      .w_left{
+        @media screen and (min-width: 992px) {
+          width: 30%;
+        }
+        .section-content{
+          margin-bottom: 35px;
+          line-height: 1.6;
+        }
+      }
+      .w_right{
+        @media screen and (min-width: 992px) {
+          width: 70%;
+        }
+        .item{
+          overflow: hidden;
+          position: relative;
+          img{
+            position: relative;
+            display: block;
+            width: 100%;
+            height: 300px;
+            object-fit: cover;
+            object-position: center;
+            transition: all 0.3s linear;
+            @media screen and (min-width: 992px) {
+              height: 350px;
+            }
+          }
+          a{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            opacity: 0;
+            background: rgba(0, 0, 0, 0.5);
+            visibility: hidden;
+            transition: all 0.3s linear;
+            padding: 0 15px;
+            span{
+              text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+              font-size: 20px;
+              letter-spacing: 10px;
+              text-transform: uppercase;
+              margin: 0;
+              font-weight: 700;
+              width: 100%;
+              color: #c59d5f;
+              transition: all 0.3s linear;
+            }
+          }
+          &:hover{
+            img{
+              transform: scale(1.2);
+            }
+            a{
+              opacity: 1;
+              visibility: visible;
+              span{
+                letter-spacing: 0;
+              }
+            }
+          }
+        }
+      }
+    }
+    .section-blogs{
+      .wrapper{
+        box-shadow: 0 0 30px 1px rgba(0, 0, 0, 0.15);
+        >*{
+          @media screen and (min-width: 992px) {
+            width: 50%;
+
+          }
+        }
+      }
+      .item-main{
+        position: relative;
+        img{
+          height: 400px;
+          width: 100%;
+          object-fit: cover;
+          object-position: center;
+          transition: all .3s linear;
+          display: block;
+        }
+        .content{
+          padding: 25px;
+          height: 167px;
+          .tags{
+            display: flex;
+            flex-wrap: wrap;
+            margin-bottom: 10px;
+            .tag{
+              display: inline-block;
+              padding: 5px 10px;
+              background-color: #041527;
+              color: #fff;
+              font-size: 12px;
+              text-transform: uppercase;
+              line-height: normal;
+              margin: 0 6px 6px 0;
+            }
+          }
+          .title{
+            color: #041527;
+            margin-bottom: 15px;
+            text-transform: capitalize;
+            font-size: 22px;
+            letter-spacing: 0;
+            line-height: 30px;
+            font-weight: bold;
+            @include line_text(1);
+          }
+          .desc{
+            line-height: 1.3;
+            @include line_text(2);
+          }
+        }
+        &:hover{
+          .content{
+            .desc{
+
+            }
+          }
+        }
+      }
+      .wrap-item-short{
+        background-color: #f4f1ea;
+        padding: 20px;
+        @media screen and (min-width: 992px) {
+          max-height: 567px;
+          overflow: auto;
+        }
+
+        .item{
+          width: 100%;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          padding-bottom: 20px;
+          border-bottom: 1px solid #e3e0db;
+          margin-bottom: 20px;
+          &:last-child{
+            border-bottom: unset;
+            margin-bottom: 0;
+          }
+          img{
+            width: 100px;
+            height: 80px;
+            object-fit: cover;
+            object-position: center;
+            margin-right: 15px;
+          }
+          .content{
+            width: calc(100% - 115px);
+            .tags{
+              display: flex;
+              flex-wrap: wrap;
+              margin-bottom: 10px;
+              .tag{
+                display: inline-block;
+                padding: 5px 10px;
+                background-color: #041527;
+                color: #fff;
+                font-size: 12px;
+                text-transform: uppercase;
+                line-height: normal;
+                margin: 0 6px 6px 0;
+              }
+            }
+            .title{
+              color: #041527;
+              margin-bottom: 10px;
+              text-transform: capitalize;
+              font-size: 16px;
+              letter-spacing: 0;
+              line-height: 30px;
+              font-weight: bold;
+              @include line_text(1);
+            }
+            .desc{
+              line-height: 1.3;
+              @include line_text(2);
+            }
+          }
         }
       }
     }
