--- a/assets/scss/_root.scss
+++ b/assets/scss/_root.scss
@@ -1,4 +1,7 @@
-.btn{
+html{
+  overflow-x: hidden;
+}
+.btn {
   position: relative;
   display: inline-block;
   font-size: 16px;
@@ -10,6 +13,7 @@
   border-color: #c59d5f;
   border-radius: 0;
   transition: all .3s;
+
   &:before {
     position: absolute;
     content: "";
@@ -25,6 +29,7 @@
     border-color: #c59d5f;
     transition: all .3s linear;
   }
+
   &:after {
     position: absolute;
     content: "";
@@ -40,15 +45,18 @@
     border-color: #c59d5f;
     transition: all .3s linear;
   }
-  &:hover{
+
+  &:hover {
     background: transparent;
     border-color: #c59d5f;
     color: #c59d5f;
+
     &:after {
       width: 100%;
       height: 0;
       right: 0;
     }
+
     &:before {
       width: 100%;
       height: 0;
@@ -56,25 +64,28 @@
     }
   }
 }
-.wrap-image-animation{
-  margin: auto auto auto 20px;
+
+.wrap-image-animation {
+  margin: auto auto auto 13px;
   bottom: 0;
   left: 0;
   position: relative;
   right: 0;
   top: 5px;
-  width: 100%;
   z-index: 1;
-  .wrap-img{
+  width: calc(100% - 10px);
+
+  .wrap-img {
     position: relative;
     transform: translate(-15px, -15px);
     transition: .2s ease-in-out;
     z-index: 2;
 
-    .img-main{
+    .img-main {
       width: 100%;
     }
-    .btn-play-yt{
+
+    .btn-play-yt {
       position: absolute;
       top: 50%;
       left: 50%;
@@ -84,21 +95,25 @@
       opacity: 0;
       visibility: hidden;
       transition: all .3s;
-      &:hover{
+
+      &:hover {
         color: #c59d5f;
       }
     }
 
   }
-  &:hover{
-    .wrap-img{
+
+  &:hover {
+    .wrap-img {
       transform: unset;
-      .btn-play-yt{
+
+      .btn-play-yt {
         opacity: 1;
         visibility: visible;
       }
     }
   }
+
   &:after {
     background-color: #fff;
     bottom: 5px;
@@ -109,58 +124,66 @@
     top: 5px;
   }
 }
-@keyframes loading-1{
-  0%{
+
+@keyframes loading-1 {
+  0% {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
-  100%{
+  100% {
     -webkit-transform: rotate(180deg);
     transform: rotate(180deg);
   }
 }
-@keyframes loading-2{
-  0%{
+
+@keyframes loading-2 {
+  0% {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
-  100%{
+  100% {
     -webkit-transform: rotate(144deg);
     transform: rotate(144deg);
   }
 }
-@keyframes loading-3{
-  0%{
+
+@keyframes loading-3 {
+  0% {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
-  100%{
+  100% {
     -webkit-transform: rotate(90deg);
     transform: rotate(90deg);
   }
 }
-@keyframes loading-4{
-  0%{
+
+@keyframes loading-4 {
+  0% {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
-  100%{
+  100% {
     -webkit-transform: rotate(36deg);
     transform: rotate(36deg);
   }
 }
-@keyframes loading-5{
-  0%{
+
+@keyframes loading-5 {
+  0% {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
-  100%{
+  100% {
     -webkit-transform: rotate(126deg);
     transform: rotate(126deg);
   }
 }
-@media only screen and (max-width: 990px){
-  .progress{ margin-bottom: 20px; }
+
+@media only screen and (max-width: 990px) {
+  .progress {
+    margin-bottom: 20px;
+  }
 }
 
 @keyframes bounce {
@@ -191,4 +214,310 @@
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
+}
+
+
+@keyframes modal-video {
+  0% {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes modal-video-inner {
+  0% {
+    transform: translateY(100px);
+  }
+  to {
+    transform: translate(0);
+  }
+}
+
+.modal-video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .5);
+  z-index: 1000000;
+  cursor: pointer;
+  opacity: 1;
+  animation-timing-function: ease-out;
+  animation-duration: .3s;
+  animation-name: modal-video;
+  transition: opacity .3s ease-out;
+}
+
+.modal-video-close {
+  opacity: 0;
+}
+
+.modal-video-close .modal-video-movie-wrap {
+  transform: translateY(100px);
+}
+
+.modal-video-body {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 0 10px;
+  box-sizing: border-box;
+}
+
+.modal-video-body,
+.modal-video-inner {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.modal-video-inner {
+  align-items: center;
+}
+
+@media (orientation: landscape) {
+  .modal-video-inner {
+    padding: 10px 60px;
+    box-sizing: border-box;
+  }
+}
+
+.modal-video-movie-wrap {
+  width: 100%;
+  height: 0;
+  position: relative;
+  padding-bottom: 56.25%;
+  background-color: #333;
+  animation-timing-function: ease-out;
+  animation-duration: .3s;
+  animation-name: modal-video-inner;
+  transform: translate(0);
+  transition: transform .3s ease-out;
+}
+
+.modal-video-movie-wrap iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.modal-video-close-btn {
+  position: absolute;
+  z-index: 2;
+  top: -45px;
+  right: 0;
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  overflow: hidden;
+  border: none;
+  background: transparent;
+}
+
+@media (orientation: landscape) {
+  .modal-video-close-btn {
+    top: 0;
+    right: -45px;
+  }
+}
+
+.modal-video-close-btn:before {
+  transform: rotate(45deg);
+}
+
+.modal-video-close-btn:after {
+  transform: rotate(-45deg);
+}
+
+.modal-video-close-btn:after,
+.modal-video-close-btn:before {
+  content: "";
+  position: absolute;
+  height: 2px;
+  width: 100%;
+  top: 50%;
+  left: 0;
+  background: #fff;
+  border-radius: 5px;
+  margin-top: -6px;
+}
+
+.js-video-button {
+  position: relative;
+}
+
+.js-video-button svg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.js-video-button svg path {
+  fill: #0a53be;
+}
+
+.img_video_js {
+  width: 200px;
+  height: 100px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.item_stunning {
+  padding: 15px;
+  overflow: hidden;
+  border: 1px solid #dddddd;
+  height: 100%;
+  position: relative;
+  .icon{
+    font-size: 50px;
+    margin-bottom: 20px;
+    transition: all .3s linear;
+  }
+  .title{
+    margin-bottom: 30px;
+    position: relative;
+    letter-spacing: 0.5px;
+    font-size: 18px;
+    font-weight: 600;
+    text-transform: capitalize;
+    line-height: 1.3;
+    transition: all .3s linear;
+  }
+  .desc{
+    font-size: 15px;
+    line-height: 1.4;
+    letter-spacing: 0.5px;
+  }
+  &:before, &:after {
+    border-width: 1px;
+    border-style: solid;
+    content: "";
+    position: absolute;
+    height: 50px;
+    width: 50px;
+    transition: all .3s linear;
+  }
+  &:before {
+    top: -1px;
+    left: -1px;
+    border-bottom-color: transparent;
+    border-right-color: transparent;
+    border-top-color: #c59d5f;
+    border-left-color: #c59d5f;
+  }
+  &:after {
+    right: -1px;
+    bottom: -1px;
+    border-top-color: transparent;
+    border-left-color: transparent;
+    border-right-color: #c59d5f;
+    border-bottom-color: #c59d5f;
+  }
+  &:hover{
+    .title,.icon{
+      color: #c59d5f;
+    }
+    &:before {
+      border-width: 5px;
+      border-style: solid;
+      border-bottom-color: transparent;
+      border-right-color: transparent;
+    }
+    &:after {
+      border-width: 5px;
+      border-style: solid;
+      border-top-color: transparent;
+      border-left-color: transparent;
+    }
+  }
+  @media screen and (min-width: 992px) {
+    padding: 30px;
+  }
+}
+
+.item-partner{
+  a{
+    img{
+      height: 50px;
+      width: auto;
+      margin: 0 20px 20px;
+    }
+  }
+}
+
+.item-testimonial{
+  padding: 10px;
+  .content{
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.15);
+    padding: 25px;
+    background-color: #fff;
+    .stars{
+      margin-bottom: 15px;
+      i{
+        font-size: 20px;
+        color: #c59d5f;
+        margin: 0 3px;
+      }
+    }
+    .title{
+      margin-bottom: 20px;
+      position: relative;
+      letter-spacing: 0.5px;
+      font-size: 18px;
+      text-transform: capitalize;
+      line-height: 1.3;
+      transition: all .3s linear;
+    }
+    .avatar{
+      text-align: center;
+      margin-bottom: 15px;
+      img{
+        width: 80px;
+        height: 80px;
+        object-fit: cover;
+        object-position: center;
+        border-radius: 50%;
+      }
+    }
+    .name{
+      margin-bottom: 10px;
+      letter-spacing: 0.5px;
+      font-size: 18px;
+      font-weight: 600;
+      text-transform: capitalize;
+      line-height: 1.3;
+      transition: all .3s linear;
+      text-align: center;
+    }
+    .company{
+      margin-bottom: 16px;
+      letter-spacing: 0.5px;
+      font-style: italic;
+      font-size: 18px;
+      text-transform: capitalize;
+      line-height: 1.3;
+      transition: all .3s linear;
+      text-align: center;
+      color: #c59d5f;
+    }
+  }
+}
+.swiper-container {
+  padding: 15px;
+}
+.swiper-button-prev, .swiper-button-next {
+  width: 30px;
+  height: 30px;
+  background-color: #000;
+}
+.swiper-button-next:after, .swiper-button-prev:after {
+  font-size: 14px;
+  color: #fff;
 }
