--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -509,12 +509,12 @@ html {
   padding: 15px; }
 
 .swiper-button-prev, .swiper-button-next {
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   background-color: #000; }
 
 .swiper-button-next:after, .swiper-button-prev:after {
-  font-size: 14px;
+  font-size: 15px;
   color: #fff; }
 
 .bl_frontend {
@@ -675,7 +675,8 @@ html {
     .bl_frontend .main .section-slider .tp-teaser-1 {
       font-family: 'PinyonScript', sans-serif;
       font-size: 35px;
-      color: #c59d5f; }
+      color: #c59d5f;
+      text-shadow: 1px 1px 3px #222; }
     .bl_frontend .main .section-slider .tp-title-1 {
       font-family: var(--title-font);
       font-size: 72px;
@@ -687,7 +688,8 @@ html {
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
       overflow: hidden;
-      text-overflow: ellipsis; }
+      text-overflow: ellipsis;
+      text-shadow: 1px 1px 3px #222; }
     .bl_frontend .main .section-slider .tp-text-1 {
       color: #fff;
       font-size: 18px;
@@ -696,7 +698,8 @@ html {
       -webkit-line-clamp: 3;
       -webkit-box-orient: vertical;
       overflow: hidden;
-      text-overflow: ellipsis; }
+      text-overflow: ellipsis;
+      text-shadow: 1px 1px 3px #222; }
   .bl_frontend .main .section-about .section-content {
     margin-bottom: 35px; }
     .bl_frontend .main .section-about .section-content p {
