--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -540,6 +540,109 @@ html {
   .breadcrumb .current {
     color: #c59d5f; }
 
+.image-flip {
+  clear: both;
+  float: left;
+  width: 100%;
+  position: relative; }
+  .image-flip img {
+    width: 100%;
+    display: block;
+    transition: all 0.3s linear;
+    display: inherit;
+    height: auto;
+    max-width: 100%; }
+    .image-flip img.img-flip {
+      opacity: 0;
+      position: absolute;
+      left: 0px;
+      top: 0px; }
+  .image-flip:hover .img-show {
+    opacity: 0; }
+  .image-flip:hover .img-flip {
+    opacity: 1; }
+
+.item-food-history {
+  padding: 25px 0;
+  border-bottom: 1px solid #c59d5f; }
+  @media screen and (min-width: 992px) {
+    .item-food-history {
+      border: 0; } }
+  @media screen and (min-width: 992px) {
+    .item-food-history .row {
+      text-align: right; } }
+  .item-food-history .row.flex-lg-row-reverse {
+    text-align: left; }
+  .item-food-history:first-child {
+    padding-top: 50px; }
+  .item-food-history .content {
+    margin-bottom: 20px; }
+    @media screen and (min-width: 992px) {
+      .item-food-history .content {
+        margin-bottom: 0; } }
+    .item-food-history .content .title {
+      font-size: 24px;
+      text-transform: capitalize;
+      line-height: normal;
+      letter-spacing: 1.5px;
+      margin-bottom: 15px;
+      color: #fff;
+      transition: all 0.3s linear; }
+    .item-food-history .content .time {
+      color: #c59d5f; }
+    .item-food-history .content .desc {
+      color: #fff;
+      font-size: 16px;
+      line-height: 32px;
+      font-weight: 400;
+      margin: 40px 0 0 0;
+      letter-spacing: 0.5px; }
+  .item-food-history .image {
+    overflow: hidden;
+    position: relative; }
+    .item-food-history .image img {
+      position: relative;
+      display: block;
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
+      object-position: center;
+      transition: all 0.3s linear; }
+    .item-food-history .image .text {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      opacity: 0;
+      background: rgba(0, 0, 0, 0.5);
+      visibility: hidden;
+      transition: all 0.3s linear;
+      padding: 0 15px; }
+      .item-food-history .image .text span {
+        text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+        font-size: 20px;
+        letter-spacing: 10px;
+        text-transform: uppercase;
+        margin: 0;
+        font-weight: 700;
+        width: 100%;
+        color: #c59d5f;
+        transition: all 0.3s linear; }
+  .item-food-history:hover .content .title {
+    color: #c59d5f; }
+  .item-food-history:hover .image img {
+    transform: scale(1.2); }
+  .item-food-history:hover .image .text {
+    opacity: 1;
+    visibility: visible; }
+    .item-food-history:hover .image .text span {
+      letter-spacing: 0; }
+
 .bl_frontend {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
@@ -639,10 +742,6 @@ html {
         flex-direction: column; }
   .bl_frontend .main .section-padding {
     padding: 70px 0; }
-  .bl_frontend .main .section-background {
-    background-color: #f4f1ea; }
-    .bl_frontend .main .section-background .section-title p img {
-      background-color: #f4f1ea; }
   .bl_frontend .main .section-title {
     text-align: center; }
     .bl_frontend .main .section-title .sub-title > * {
@@ -682,6 +781,29 @@ html {
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%); }
+  .bl_frontend .main .section-title-border {
+    text-align: center; }
+    .bl_frontend .main .section-title-border > * {
+      display: inline-block;
+      font-size: 16px;
+      padding: 14px 40px 15px;
+      margin: 0;
+      text-transform: uppercase;
+      font-weight: 700;
+      letter-spacing: 1.5px;
+      color: #000;
+      border: 2px solid #000; }
+  .bl_frontend .main .section-background {
+    background-color: #f4f1ea; }
+    .bl_frontend .main .section-background .section-title p img {
+      background-color: #f4f1ea; }
+  .bl_frontend .main .section-background-dark {
+    background-color: #000000; }
+    .bl_frontend .main .section-background-dark .section-title p img {
+      background-color: #000000; }
+    .bl_frontend .main .section-background-dark .section-title-border > * {
+      color: #ffffff;
+      border: 2px solid #c59d5f; }
   .bl_frontend .main .section-slider {
     position: relative; }
     .bl_frontend .main .section-slider .btn-down {
@@ -941,6 +1063,52 @@ html {
           -webkit-box-orient: vertical;
           overflow: hidden;
           text-overflow: ellipsis; }
+  .bl_frontend .main .section-about-chef .section-content .wrap-content .description {
+    max-width: 1024px;
+    margin: 0 auto 30px;
+    font-size: 16px;
+    color: #041527;
+    line-height: 2;
+    text-align: center; }
+  .bl_frontend .main .section-about-chef .section-content .wrap-content .name {
+    color: #041527;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    text-align: center;
+    text-transform: capitalize;
+    margin-bottom: 10px; }
+  .bl_frontend .main .section-about-chef .section-content .wrap-content .title {
+    font-size: 16px;
+    font-weight: 700;
+    text-transform: capitalize;
+    width: 100%;
+    color: #c59d5f;
+    text-align: center; }
+  .bl_frontend .main .section-about-food .section-content {
+    position: relative; }
+    @media screen and (min-width: 992px) {
+      .bl_frontend .main .section-about-food .section-content:before {
+        content: "";
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        top: 0px;
+        height: 100%;
+        width: 1px;
+        z-index: 1;
+        background-color: #c59d5f; } }
+    @media screen and (min-width: 992px) {
+      .bl_frontend .main .section-about-food .section-content:after {
+        content: "";
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        bottom: 0px;
+        height: 5px;
+        width: 5px;
+        z-index: 1;
+        background-color: #c59d5f; } }
   .bl_frontend .footer {
     padding: 40px 0;
     background-color: #131212; }
@@ -975,9 +1143,13 @@ html {
         .bl_frontend .footer .f-body .w_info .desc a {
           color: #fff; }
     .bl_frontend .footer .f-body .w_opening {
-      border-right: 1px solid #333;
-      border-left: 1px solid #333;
+      margin: 30px 0;
       text-align: center; }
+      @media screen and (min-width: 992px) {
+        .bl_frontend .footer .f-body .w_opening {
+          margin: 0;
+          border-right: 1px solid #333;
+          border-left: 1px solid #333; } }
       .bl_frontend .footer .f-body .w_opening .title {
         font-family: 'PinyonScript', sans-serif;
         font-size: 32px;
