--- a/assets/scss/_root.scss
+++ b/assets/scss/_root.scss
@@ -547,3 +547,137 @@ html{
     color: #c59d5f;
   }
 }
+.image-flip{
+  clear: both;
+  float: left;
+  width: 100%;
+  position: relative;
+  img{
+    width: 100%;
+    display: block;
+    transition: all 0.3s linear;
+    display: inherit;
+    height: auto;
+    max-width: 100%;
+    &.img-show{
+
+    }
+    &.img-flip{
+      opacity: 0;
+      position: absolute;
+      left: 0px;
+      top: 0px;
+    }
+  }
+  &:hover{
+    .img-show{
+      opacity: 0;
+    }
+    .img-flip{
+      opacity: 1;
+    }
+  }
+}
+.item-food-history{
+  padding: 25px 0;
+  border-bottom: 1px solid #c59d5f;
+  @media screen and (min-width: 992px) {
+    border: 0;
+  }
+  .row{
+    @media screen and (min-width: 992px) {
+      text-align: right;
+    }
+    &.flex-lg-row-reverse{
+      text-align: left;
+    }
+  }
+  &:first-child{
+    padding-top: 50px;
+  }
+  .content{
+    margin-bottom: 20px;
+    @media screen and (min-width: 992px) {
+      margin-bottom: 0;
+    }
+    .title{
+      font-size: 24px;
+      text-transform: capitalize;
+      line-height: normal;
+      letter-spacing: 1.5px;
+      margin-bottom: 15px;
+      color: #fff;
+      transition: all 0.3s linear;
+    }
+    .time{
+      color: #c59d5f;
+    }
+    .desc{
+      color: #fff;
+      font-size: 16px;
+      line-height: 32px;
+      font-weight: 400;
+      margin: 40px 0 0 0;
+      letter-spacing: 0.5px;
+    }
+  }
+  .image{
+    overflow: hidden;
+    position: relative;
+    img{
+      position: relative;
+      display: block;
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
+      object-position: center;
+      transition: all 0.3s linear;
+    }
+    .text{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      opacity: 0;
+      background: rgba(0, 0, 0, 0.5);
+      visibility: hidden;
+      transition: all 0.3s linear;
+      padding: 0 15px;
+      span{
+        text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+        font-size: 20px;
+        letter-spacing: 10px;
+        text-transform: uppercase;
+        margin: 0;
+        font-weight: 700;
+        width: 100%;
+        color: #c59d5f;
+        transition: all 0.3s linear;
+      }
+    }
+  }
+  &:hover{
+    .content{
+      .title{
+        color: #c59d5f;
+      }
+    }
+    .image{
+      img{
+        transform: scale(1.2);
+      }
+      .text{
+        opacity: 1;
+        visibility: visible;
+        span{
+          letter-spacing: 0;
+        }
+      }
+    }
+  }
+}
