--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -7,7 +7,7 @@
   position: relative;
   .header{
     background-color: #000;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -192,6 +192,13 @@
           transform: translate(-50%, -50%);
         }
       }
+      .description{
+        font-size: 16px;
+        letter-spacing: 0.5px;
+        line-height: 32px;
+        max-width: 900px;
+        margin: auto;
+      }
     }
     .section-title-border{
       text-align: center;
@@ -292,7 +299,7 @@
         left: 0;
         position: absolute;
         width: 100%;
-        z-index: -1;
+        z-index: 1;
         &:before {
           bottom: 0;
           content: '';
@@ -305,6 +312,8 @@
         }
       }
       .section-main-title{
+        position: relative;
+        z-index: 2;
         .title{
           >*{
             font-size: 32px;
@@ -600,6 +609,160 @@
         }
       }
     }
+    .section-menu{
+      .section-content{
+        .wrap-list-menu{
+          padding: 40px 0;
+          border-bottom: 1px solid rgba(197, 157, 95, 0.57);
+          &:last-child{
+            border-bottom: 0;
+          }
+          .title-cate{
+            text-align: center;
+            >*{
+              font-size: 40px;
+              font-weight: 400;
+              position: relative;
+              color: #c59d5f;
+              letter-spacing: 0.5px;
+              @include PinyonScript();
+              margin-bottom: 30px;
+              display: inline-block;
+              &:before {
+                bottom: 0;
+                content: '';
+                display: block;
+                height: 1px;
+                left: 0;
+                margin: 0 auto;
+                position: absolute;
+                right: 0;
+                width: auto;
+                background-color: #c59d5f;
+              }
+            }
+          }
+          .wrapper{
+            .item{
+              margin-bottom: 20px;
+              &:last-child{
+                margin-bottom: 0;
+              }
+              .image{
+                position: relative;
+                width: 180px;
+                height: 180px;
+                overflow: hidden;
+                @media screen and (min-width: 992px) {
+                  margin-right: 20px;
+                }
+                img{
+                  width: 180px;
+                  height: 180px;
+                  object-fit: cover;
+                  object-position: center;
+                }
+                .rank{
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  display: inline-block;
+                  padding: 5px 10px;
+                  &.rank-a{
+                    color: #fff;
+                    background-color: #198754;
+                    border-color: #198754;
+                  }
+                  &.rank-b{
+                    color: #fff;
+                    background-color: #0d6efd;
+                    border-color: #0d6efd;
+                  }
+                  &.rank-c{
+                    color: #000;
+                    background-color: #ffc107;
+                    border-color: #ffc107;
+                  }
+                  &.rank-d{
+                    color: #000;
+                    background-color: #0dcaf0;
+                    border-color: #0dcaf0;
+                  }
+                  &.rank-e{
+                    color: #fff;
+                    background-color: #dc3545;
+                    border-color: #dc3545;
+                  }
+                }
+              }
+              .content{
+                @media screen and (min-width: 992px) {
+                  width: calc(100% - 200px);
+                }
+                .title{
+                  display: flex;
+                  flex-direction: row;
+                  justify-content: space-between;
+                  position: relative;
+                  width: 100%;
+                  margin-bottom: 15px;
+                  &:after{
+                    border-color: #eaeaeb;
+                    border-style: dashed;
+                    border-width: 0 0 2px;
+                    content: '';
+                    height: 0;
+                    left: 0;
+                    position: absolute;
+                    width: 100%;
+                    top: 15px;
+                    z-index: -1;
+                  }
+                  .name{
+                    color: #041527;
+                    font-size: 20px;
+                    font-weight: 400;
+                    letter-spacing: 0.5px;
+                    line-height: 1.4;
+                    margin: 0;
+                    text-transform: capitalize;
+                    transition: all .5s ease 0s;
+                    padding-right: 15px;
+                    background-color: #fff;
+                  }
+                  .w-price{
+                    padding-left: 15px;
+                    background-color: #fff;
+                    .price{
+                      transition: all .5s ease 0s;
+                      color: #041527;
+                      font-size: 20px;
+                      font-weight: 700;
+                      line-height: 1.4;
+                      height: 30px;
+                    }
+                  }
+                }
+
+                .description{
+                  color: #505050;
+                  font-size: 16px;
+                  font-weight: 400;
+                  letter-spacing: 0.5px;
+                  line-height: 32px;
+                  margin-bottom: 15px;
+                }
+                .wrap-btn{
+                  text-align: left;
+                }
+              }
+            }
+          }
+
+        }
+      }
+    }
+
   }
   .footer{
     padding: 40px 0;
