--- a/assets/scss/_root.scss
+++ b/assets/scss/_root.scss
@@ -13,7 +13,7 @@ html{
   border-color: #c59d5f;
   border-radius: 0;
   transition: all .3s;
-
+  margin: 10px;
   &:before {
     position: absolute;
     content: "";
