--- a/assets/scss/_root.scss
+++ b/assets/scss/_root.scss
@@ -1,6 +1,22 @@
 html{
   overflow-x: hidden;
 }
+.bg_backgdrop {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 98;
+  background-color: #0000008f;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
+  transition: all .3s;
+  &.active {
+    opacity: 1;
+    visibility: visible;
+  }
+}
 .btn {
   position: relative;
   display: inline-block;
@@ -64,7 +80,19 @@ html{
     }
   }
 }
-
+.btn-delete{
+  position: relative;
+  display: inline-block;
+  font-size: 16px;
+  padding: 6px 15px 6px;
+  border-width: 2px;
+  border-style: solid;
+  color: #ffffff;
+  background-color: #d31c1c;
+  border-color: #d31c1c;
+  border-radius: 0;
+  transition: all .3s;
+}
 .wrap-image-animation {
   margin: auto auto auto 13px;
   bottom: 0;
@@ -521,6 +549,24 @@ html{
   font-size: 15px;
   color: #fff;
 }
+.pagination{
+  justify-content: center;
+  .page-item{
+    margin: 0 2px;
+    .page-link{
+      border-color: #c59d5f;
+      color: #c59d5f;
+      &.active{
+        color: #ffffff;
+        background-color: #c59d5f;
+        border-color: #c59d5f;
+      }
+      &:focus{
+        box-shadow: unset;
+      }
+    }
+  }
+}
 .breadcrumb{
   display: flex;
   flex-direction: row;
@@ -677,6 +723,164 @@ html{
         span{
           letter-spacing: 0;
         }
+      }
+    }
+  }
+}
+.wrap-bar{
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #d5d5d5;
+  &:last-child{
+    margin-bottom: 0;
+    border-bottom: 0
+  }
+  .title{
+    color: #041527;
+    margin-bottom: 15px;
+    text-transform: capitalize;
+    font-size: 20px;
+    letter-spacing: 0;
+    line-height: 30px;
+    font-weight: bold;
+  }
+  .content{
+    .nav-tags{
+      display: flex;
+      flex-wrap: wrap;
+      li{
+        margin-bottom: 10px;
+        margin-right: 10px;
+        &:last-child{
+          margin-bottom: 0;
+        }
+        a{
+          display: inline-block;
+          padding: 5px 10px;
+          background-color: #041527;
+          color: #fff;
+          font-size: 12px;
+          text-transform: uppercase;
+          line-height: normal;
+        }
+      }
+    }
+    .nav-category{
+      li{
+        margin-bottom: 10px;
+        &:last-child{
+          margin-bottom: 0;
+        }
+        a{
+          text-transform: capitalize;
+          font-size: 17px;
+          color: #041527;
+          line-height: 1.2;
+          color: #000;
+          transition: all .3s;
+          padding-left: 0;
+          position: relative;
+          transition: all .3s linear 0s;
+          &::after{
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: -20px;
+            width: 12px;
+            height: 2px;
+            line-height: inherit;
+            transform: translateY(-50%);
+            transition: all .3s linear;
+            background-color: #fff;
+          }
+          &:hover{
+            background-color: unset;
+            color: #c59d5f;
+            padding-left: 20px;
+            &::after{
+              left: 0;
+              background-color: #c59d5f;
+            }
+          }
+          &:focus{
+            background-color: unset;
+          }
+        }
+
+      }
+    }
+  }
+}
+.item-blog{
+  position: relative;
+  box-shadow: 0 0 30px 1px rgba(0, 0, 0, 0.15);
+
+  .image{
+    overflow: hidden;
+    img{
+      @media screen and (min-width: 992px) {
+        height: 250px;
+      }
+      height: 200px;
+      width: 100%;
+      object-fit: cover;
+      object-position: center;
+      transition: all .3s linear;
+      display: block;
+    }
+  }
+  .content{
+    padding: 25px;
+    height: 167px;
+    .tags{
+      display: flex;
+      flex-wrap: wrap;
+      margin-bottom: 10px;
+      .tag{
+        display: inline-block;
+        padding: 5px 10px;
+        background-color: #041527;
+        color: #fff;
+        font-size: 12px;
+        text-transform: uppercase;
+        line-height: normal;
+        margin: 0 6px 6px 0;
+      }
+    }
+    .title{
+      color: #041527;
+      margin-bottom: 15px;
+      text-transform: capitalize;
+      font-size: 22px;
+      letter-spacing: 0;
+      line-height: 30px;
+      font-weight: bold;
+      @include line_text(1);
+    }
+    .desc{
+      line-height: 1.3;
+      @include line_text(2);
+    }
+  }
+  &:hover{
+    .image{
+      img{
+        transform: scale(1.2);
+      }
+    }
+  }
+}
+
+.wrapper-gallery{
+  .grid-item{
+    overflow: hidden;
+    img{
+      transition: all .5s ease 0s;
+      width: 100%;
+    }
+    &:hover{
+      img{
+        transform: scale(1.1);
       }
     }
   }
