--- a/assets/scss/_root.scss
+++ b/assets/scss/_root.scss
@@ -17,6 +17,9 @@ html{
     visibility: visible;
   }
 }
+.gallery-item {
+  width: 200px;
+}
 .btn {
   position: relative;
   display: inline-block;
