--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -117,6 +117,9 @@ html {
     opacity: 1;
     visibility: visible; }
 
+.gallery-item {
+  width: 200px; }
+
 .btn {
   position: relative;
   display: inline-block;
@@ -829,7 +832,12 @@ html {
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 99; }
+    z-index: 9999;
+    transition: all .3s linear; }
+    .bl_frontend .header.up {
+      transform: translateY(0); }
+    .bl_frontend .header.down {
+      transform: translateY(-100%); }
     .bl_frontend .header .wrapper {
       min-height: 78px; }
       .bl_frontend .header .wrapper .logo img {
@@ -838,7 +846,10 @@ html {
       @media screen and (min-width: 992px) {
         .bl_frontend .header .wrapper .menu .nav .dropdown:hover .dropdown-menu {
           display: block;
-          margin-top: 0; } }
+          position: absolute;
+          inset: 0px auto auto 0px;
+          margin: -2px 0 0 0 !important;
+          transform: translate(0px, 62px); } }
       @media screen and (min-width: 992px) {
         .bl_frontend .header .wrapper .menu .nav .dropdown .dropdown-menu {
           display: none; } }
@@ -857,6 +868,10 @@ html {
         padding: 22px 15px; }
         .bl_frontend .header .wrapper .menu .nav .nav-item .nav-link.active, .bl_frontend .header .wrapper .menu .nav .nav-item .nav-link:hover {
           color: #c59d5f; }
+        .bl_frontend .header .wrapper .menu .nav .nav-item .nav-link:focus {
+          border: 0;
+          box-shadow: unset;
+          outline: 0; }
         @media screen and (min-width: 992px) {
           .bl_frontend .header .wrapper .menu .nav .nav-item .nav-link.dropdown-toggle::after {
             display: none; } }
@@ -923,6 +938,10 @@ html {
           font-weight: 700;
           display: block;
           line-height: 1.5; }
+        .bl_frontend .header .wrap_menu_mb .nav .nav-item .nav-link[data-bs-toggle="collapse"] {
+          transform: rotate(90deg); }
+          .bl_frontend .header .wrap_menu_mb .nav .nav-item .nav-link[data-bs-toggle="collapse"].collapsed {
+            transform: rotate(0); }
         .bl_frontend .header .wrap_menu_mb .nav .nav-item .collapse-item {
           padding: 10px 15px;
           background-color: #f4f1ea; }
@@ -1131,32 +1150,31 @@ html {
           position: relative;
           display: block;
           width: 100%;
-          height: 300px;
+          height: 320px;
           object-fit: cover;
           object-position: center;
+          transform: scale(1.2);
           transition: all 0.3s linear; }
           @media screen and (min-width: 992px) {
             .bl_frontend .main .section-services .w_right .item img {
-              height: 350px; } }
+              height: 270px; } }
         .bl_frontend .main .section-services .w_right .item a {
           display: flex;
           align-items: center;
           justify-content: center;
           text-align: center;
           position: absolute;
-          width: 100%;
-          height: 100%;
           top: 0;
           left: 0;
-          opacity: 0;
-          background: rgba(0, 0, 0, 0.5);
-          visibility: hidden;
-          transition: all 0.3s linear;
-          padding: 0 15px; }
+          width: 100%;
+          height: 100%;
+          background: rgba(0, 0, 0, 0.32);
+          padding: 0 15px;
+          transition: all 0.3s linear; }
           .bl_frontend .main .section-services .w_right .item a span {
             text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
             font-size: 20px;
-            letter-spacing: 10px;
+            letter-spacing: 5px;
             text-transform: uppercase;
             margin: 0;
             font-weight: 700;
@@ -1164,7 +1182,7 @@ html {
             color: #c59d5f;
             transition: all 0.3s linear; }
         .bl_frontend .main .section-services .w_right .item:hover img {
-          transform: scale(1.2); }
+          transform: scale(1); }
         .bl_frontend .main .section-services .w_right .item:hover a {
           opacity: 1;
           visibility: visible; }
@@ -1647,22 +1665,20 @@ html {
       font-weight: 400;
       letter-spacing: 0.5px;
       line-height: 32px; }
-    .bl_frontend .main .section-gallery .nav-pills {
+    .bl_frontend .main .section-gallery .nav {
       justify-content: center; }
-      .bl_frontend .main .section-gallery .nav-pills .nav-item .nav-link {
-        padding: 10px 30px 10px;
+      .bl_frontend .main .section-gallery .nav .nav-item .nav-link {
+        padding: 5px 15px;
         transition: all .3s;
         margin-right: 15px;
-        font-size: 20px;
+        font-size: 17px;
         border-width: 2px;
         border-style: solid;
         border-color: transparent;
         color: #041527; }
-        .bl_frontend .main .section-gallery .nav-pills .nav-item .nav-link:last-child {
+        .bl_frontend .main .section-gallery .nav .nav-item .nav-link:last-child {
           margin-right: 0; }
-        .bl_frontend .main .section-gallery .nav-pills .nav-item .nav-link.active {
-          font-size: 20px;
-          padding: 10px 30px 10px;
+        .bl_frontend .main .section-gallery .nav .nav-item .nav-link.active {
           border-radius: 0;
           background-color: #c59d5f;
           color: #fff; }
