--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -11,7 +11,14 @@
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 99;
+    z-index: 9999;
+    transition: all .3s linear;
+    &.up{
+      transform: translateY(0);
+    }
+    &.down{
+      transform: translateY(-100%);
+    }
     .wrapper{
       min-height: 78px;
       .logo{
@@ -25,7 +32,10 @@
           .dropdown:hover .dropdown-menu {
             @media screen and (min-width: 992px) {
               display: block;
-              margin-top: 0;
+              position: absolute;
+              inset: 0px auto auto 0px;
+              margin: -2px 0 0 0 !important;
+              transform: translate(0px, 62px);
             }
           }
           .dropdown .dropdown-menu {
@@ -53,6 +63,11 @@
               padding: 22px 15px;
               &.active, &:hover{
                 color: #c59d5f;
+              }
+              &:focus{
+                border: 0;
+                box-shadow: unset;
+                outline: 0;
               }
               &.dropdown-toggle{
                 &::after{
@@ -147,6 +162,14 @@
             font-weight: 700;
             display: block;
             line-height: 1.5;
+          }
+          .nav-link{
+            &[data-bs-toggle="collapse"]{
+              transform: rotate(90deg);
+              &.collapsed{
+                transform: rotate(0);
+              }
+            }
           }
           .collapse-item{
             padding: 10px 15px;
@@ -422,12 +445,13 @@
             position: relative;
             display: block;
             width: 100%;
-            height: 300px;
+            height: 320px;
             object-fit: cover;
             object-position: center;
+            transform: scale(1.2);
             transition: all 0.3s linear;
             @media screen and (min-width: 992px) {
-              height: 350px;
+              height: 270px;
             }
           }
           a{
@@ -436,19 +460,17 @@
             justify-content: center;
             text-align: center;
             position: absolute;
-            width: 100%;
-            height: 100%;
             top: 0;
             left: 0;
-            opacity: 0;
-            background: rgba(0, 0, 0, 0.5);
-            visibility: hidden;
-            transition: all 0.3s linear;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.32);
             padding: 0 15px;
+            transition: all 0.3s linear;
             span{
               text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
               font-size: 20px;
-              letter-spacing: 10px;
+              letter-spacing: 5px;
               text-transform: uppercase;
               margin: 0;
               font-weight: 700;
@@ -459,7 +481,7 @@
           }
           &:hover{
             img{
-              transform: scale(1.2);
+              transform: scale(1);
             }
             a{
               opacity: 1;
@@ -1117,14 +1139,14 @@
       }
     }
     .section-gallery{
-      .nav-pills{
+      .nav{
         justify-content: center;
         .nav-item{
           .nav-link{
-            padding: 10px 30px 10px;
+            padding: 5px 15px;
             transition: all .3s;
             margin-right: 15px;
-            font-size: 20px;
+            font-size: 17px;
             border-width: 2px;
             border-style: solid;
             border-color: transparent;
@@ -1133,8 +1155,6 @@
               margin-right: 0;
             }
             &.active{
-              font-size: 20px;
-              padding: 10px 30px 10px;
               border-radius: 0;
               background-color: #c59d5f;
               color: #fff;
